--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,27 @@
         <module>domitory_bbs_pojo</module>
         <module>bbs_dormitory_web</module>
         <module>bbs_dormitory_service</module>
-        <module>bbs_dormitory_util</module>
         <module>bbs_dormitory_dao</module>
+        <module>bbs_dormitory_util</module>
     </modules>
     <build>
+        <!--多环境配置-->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <!-- 资源根目录排除各环境的配置，防止在生成目录中多余其它目录 -->
+                <filtering>true</filtering>
+                <excludes>
+                    <exclude>dev/*</exclude>
+                    <exclude>prod/*</exclude>
+                    <exclude>pre-prod/*</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/${profiles.active}</directory>
+            </resource>
+        </resources>
+        <!--插件配置-->
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -258,5 +275,31 @@
 
         </dependencies>
     </dependencyManagement>
-
+    <!--多环境配置-->
+    <profiles>
+        <!--本地开发环境-->
+        <profile>
+            <id>dev</id>
+            <properties>
+                <profiles.active>dev</profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <!--预生产环境-->
+        <profile>
+            <id>pre-prod</id>
+            <properties>
+                <profiles.active>pre-prod</profiles.active>
+            </properties>
+        </profile>
+        <!--生产环境-->
+        <profile>
+            <id>prod</id>
+            <properties>
+                <profiles.active>prod</profiles.active>
+            </properties>
+        </profile>
+    </profiles>
 </project>
